--- a/container-server/docker-compose.yml
+++ b/container-server/docker-compose.yml
@@ -57,4 +57,5 @@ networks:
 
 ### Instructions
 # docker-compose build
-# docker-compose up
+# docker-compose up (or docker-compose up -d if you want)
+# docker-compose ps
